--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "colors": "^1.4.0",
     "core-js": "^3.12.1",
     "fitty": "^2.3.0",
+    "gh-pages": "^3.2.3",
     "glob": "^7.1.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^5.0.0",
@@ -96,5 +97,8 @@
       "no-eq-null": 2,
       "no-unused-expressions": 0
     }
+  },
+  "dependencies": {
+    "reveal-multiplex": "^0.1.0"
   }
 }
